--- a/pom.xml
+++ b/pom.xml
@@ -326,7 +326,7 @@
 			<id>gpg</id>
 			<activation>
 				<property>
-					<name>env.gpg.passphrase</name>
+								<name>env.MAVEN_GPG_PASSPHRASE</name>
 				</property>
 			</activation>
 			<build>
@@ -334,7 +334,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
-						<version>3.1.0</version>
+								<version>3.2.7</version>
 						<executions>
 							<execution>
 								<id>sign-artifacts</id>
@@ -342,12 +342,9 @@
 								<goals>
 									<goal>sign</goal>
 								</goals>
-								<configuration>
-									<passphrase>${env.gpg.passphrase}</passphrase>
-								</configuration>								
-							</execution>
-						</executions>
-					</plugin>
+										</execution>
+								</executions>
+						</plugin>
 				</plugins>
 			</build>
 		</profile>
