--- a/pom.xml
+++ b/pom.xml
@@ -232,6 +232,9 @@
 							<groupId>org.apache.maven.plugins</groupId>
 							<artifactId>maven-release-plugin</artifactId>
 							<version>3.0.1</version>
+							<configuration>
+								<releaseProfiles>release</releaseProfiles>
+							</configuration>
 						</plugin>
 						<plugin>
 							<groupId>org.apache.maven.plugins</groupId>
@@ -387,8 +390,22 @@
 					<scope>provided</scope>
 				</dependency>
 			</dependencies>
-			
 		</profile>
 		
+
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.sonatype.central</groupId>
+                        <artifactId>central-publishing-maven-plugin</artifactId>
+                        <version>0.7.0</version>
+                        <extensions>true</extensions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
     </profiles>
 </project>
