--- a/pom.xml
+++ b/pom.xml
@@ -444,6 +444,12 @@
                     <version>4.4.0-SNAPSHOT</version>
                     <scope>test</scope>
                 </dependency>
+                <dependency>
+                    <groupId>jakarta.servlet</groupId>
+                    <artifactId>jakarta.servlet-api</artifactId>
+                    <version>6.0.0</version>
+                    <scope>provided</scope>
+                </dependency>
             </dependencies>
         </profile>
         
